# rapids-build-backend

./: .gitignore  .pre-commit-config.yaml  README.md  dependencies.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build-main.yaml  build-tag.yaml  build.yaml  checks-and-builds.yaml  checks.yaml  pr.yaml
ci/: build_python.sh  build_wheel.sh  check_style.sh
ci/release/: update-version.sh
conda/recipes/rapids-build-backend/: meta.yaml
conda/recipes/rapids_build_backend/: meta.yaml  run_test.sh
rapids_build_backend/: build.py  config.py  impls.py  utils.py
rapids_builder/: __init__.py  build.py  config.py  impls.py  utils.py
tests/: conftest.py  test_config.py  test_impls.py  test_packages.py
tests/config_packages/templates/: pyproject.toml  scikit_build_core_pyproject.toml  setuptools_pyproject.toml
tests/examples/setuptools-with-imports-in-setup-py/: dependencies.yaml  pyproject.toml  setup.py
tests/rapids-test-dummy/: pyproject.toml
tests/rapids-test-dummy/rapids_test_dummy/: __init__.py
tests/templates/: CMakeLists.txt  dependencies-rbb-only.yaml  dependencies.yaml  pyproject.toml  setup.py
