# Copyright (c) 2024, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "rapids_builder"
version = "0.0.1"
description = "Custom PEP517 builder for RAPIDS"
dependencies = [
    "packaging",
    "tomli",
    "tomli-w",
]
license = { text = "Apache 2.0" }
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
scikit-build-core = [
    "scikit-build-core[pyproject]>=0.7.0",
]
setuptools = [
    "setuptools",
    "wheel",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["rapids_builder*"]

[tool.ruff]
lint.select = ["E", "F", "W", "I", "N", "UP"]
lint.fixable = ["ALL"]
