# Copyright (c) 2024, NVIDIA CORPORATION.

[build-system]
build-backend = "rapids_build_backend.build"
requires = [
    "rapids-build-backend[{{ rapids_build_backend_extra }}]",
]

[project]
name = "{{ name }}"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
{% for dependency in dependencies %}
    "{{ dependency }}",
{% endfor %}
]

[project.optional-dependencies]
{% for extra, deps in extras.items() %}
{{ extra }} = [
{% for dep in deps %}
    "{{ dep }}",
{% endfor %}
]

{% endfor %}

[tool.rapids-build-backend]
build-backend = "{{ build_backend }}"
requires = [
{% for require in build_requires %}
    "{{ require }}",
{% endfor %}
]
{% for flag, value in flags.items() %}
{{ flag }} = {{ value }}
{% endfor %}
