# Copyright (c) 2024, NVIDIA CORPORATION.

[build-system]
build-backend = "rapids_build_backend.build"
requires = [
    "rapids-build-backend",
    "{{ build_backend_package }}",
]

[project]
name = "{{ name }}"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]

[tool.rapids-build-backend]
build-backend = "{{ build_backend }}"
requires = []
{% for flag, value in flags.items() %}
{{ flag }} = {{ value }}
{% endfor %}
